- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    4.8.6, 5.3.1
- 
    Qt 5.3.1, Windows 8.1 x64, VS2013
- 
        e2203163d9cd03165142d98fa9ba8aaf5a9c3085 (branch 5.3, 18.7.2014, 5.3.2)
QApplication never detect TabletLeaveProximity event, it only detect TabletEnterProximity event.
workaround:
implement the following code in your receiver window/widget:
bool MyWidget::nativeEvent(const QByteArray &eventType, void *message, long *result)
{
#if defined(Q_OS_WIN32)
    if(eventType=="windows_generic_MSG")
    {
        MSG* msg=(MSG*)message;
        switch (msg->message)
    }
    return false;
#endif
}
- relates to
- 
                    QTBUG-40088 QTabletEvent pointerType not properly detected -         
- Reported
 
-         
- 
                    QTBUG-39573 Tablet Proximity events have no source device parameter -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-40019 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 89876,3 | Windows: Send QTabletLeaveProximity events. | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |